<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:gravity="center"
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint"
            android:inputType="text"/>
        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/toppings"
            android:layout_gravity="center"
            android:layout_marginTop="11dp"/>
        <CheckBox
            android:id="@+id/whipped_cream_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cream"
            android:layout_marginLeft="95dp"
            android:paddingLeft="10dp"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="16sp"/>
        <CheckBox
            android:id="@+id/chocolate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chocolate"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textColor="#000000"
            android:paddingLeft="10dp"
            android:layout_marginLeft="95dp"
            />
        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/quantity"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"/>
        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="@string/increment"
            android:onClick="increment"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/zero"
            android:id="@+id/quantity_text_view"
            android:textColor="#000000"/>
        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="@string/decrement"
            android:onClick="decrement"
            android:layout_marginLeft="10dp"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:id="@+id/order_summary_text_view"
            android:textAllCaps="true"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_gravity="center_horizontal"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:onClick="submitOrder"/>
        <ImageView
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/coffee"
            android:scaleType="centerCrop"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</ScrollView>
